[package]
name = "labyrinth"
version = "0.1.0"
edition = "2021"
authors= ["Gorka Urrutia <gorkau@gmail.com>"]
description = "A simple, stupid labyrinth game made for learning purposes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5"